Fixed ie9 vertical align issue

--- a/themes/gv_sky/css/sass/_parts/_vars.sass
+++ b/themes/gv_sky/css/sass/_parts/_vars.sass
@@ -43,12 +43,16 @@ $subberwhite: #f8f8f8
 =valign
   top: 50%
   -webkit-transform: translateY(-50%)
+  -moz-transform: translateY(-50%)
+  -ms-transform: translateY(-50%)
   -o-transform: translateY(-50%)
   transform: translateY(-50%)
 
 =halign
   left: 50%
   -webkit-transform: translateX(-50%)
+  -moz-transform: translateX(-50%)
+  -ms-transform: translateX(-50%)
   -o-transform: translateX(-50%)
   transform: translateX(-50%)
 
@@ -56,6 +60,8 @@ $subberwhite: #f8f8f8
   left: 50%
   top: 50%
   -webkit-transform: translateX(-50%) translateY(-50%)
+  -moz-transform: translateX(-50%) translateY(-50%)
+  -ms-transform: translateX(-50%) translateY(-50%)
   -o-transform: translateX(-50%) translateY(-50%)
   transform: translateX(-50%) translateY(-50%)
 
